--- a/src/App.css
+++ b/src/App.css
@@ -20,8 +20,17 @@
 .app-container {
   min-width: 400px;
   width: 80%;
-  min-height: 800px;
+  min-height: 400px;
   height: 80%;
   background-color: rgba(186, 186, 186, 0.591);
   border-radius: 0.5em;
+  margin: 1em;
+}
+
+.city-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+
 }
