--- a/src/Components/City/city.css
+++ b/src/Components/City/city.css
@@ -3,4 +3,9 @@
   height: 10em;
   background-color: rgba(255, 255, 255, 0.577);
   border-radius: 0.5em;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  padding: 0.5em;
+  margin: 0.5em;
 }
