--- a/src/Components/Tile/tile.css
+++ b/src/Components/Tile/tile.css
@@ -2,6 +2,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: space-evenly;
   height: 90%;
 }
