--- a/src/Components/Search/search.css
+++ b/src/Components/Search/search.css
@@ -1,3 +1,18 @@
 .search {
+  display: flex;
+  justify-content: center;
   padding: 1em;
+  height: 2em;
+}
+.search-input {
+  height: 2.5em;
+  width: 100%;
+  border-radius: 0.5em;
+}
+.hint-container {
+  width: 20%;
+  margin-right: 1em;
+}
+.search-button {
+  cursor: pointer;
 }
