--- a/src/Components/Tile/tile.css
+++ b/src/Components/Tile/tile.css
@@ -3,5 +3,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
-  height: 90%;
+  height: 95%;
+  width: 15%;
+  background-color: rgba(0, 0, 0, 0.016);
+  border-radius: 1em;
 }
