fix: removed wrongly targeted button hover styling

--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,9 @@
   display: flex;
   justify-content: center;
   width: 100%;
-  height: 100vh;
-  background-color: rgb(178, 239, 252);
+  height: 100%;
+  background: rgb(255,255,255);
+background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(0,212,255,1) 100%);
 }
 
 .app-container {
@@ -15,6 +16,7 @@
   background-color: rgba(186, 186, 186, 0.591);
   border-radius: 0.5em;
   margin: 1em;
+  height: 100%;
 }
 
 .city-list {
