--- a/src/Components/City/city.css
+++ b/src/Components/City/city.css
@@ -27,7 +27,7 @@ input, button {
   border-radius: 1em;
 }
 
-button:hover {
+.back-button:hover, .forward-button:hover {
   width: 2.1em;
   height: 2.1em;
   background-color: rgba(0, 0, 0, 0.153);
